# contest

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  contest.py  requirements.txt  setup.py  test_cases.yaml  test_skeleton.yaml
.ci/travis/: build_tests.sh  run_tests.sh
.devcontainer/: devcontainer.json
.github/workflows/: python.yml
contest/: TestCase.py  __main__.py  __version__.py  runner.py
contest/utilities/: chdir.py  configure_yaml.py  importer.py  logger.py  which.py
examples/: CMakeLists.txt
examples/many_cases/: CMakeLists.txt  contest_recipe.yaml  printnum.cpp
examples/native_console_app/: CMakeLists.txt  contest_recipe.yaml  contest_recipe_detailed.yaml  hello_world.cpp
examples/output_file/: CMakeLists.txt  contest_recipe.yaml  numbers.cpp
examples/python_console_app/: cmake_install.cmake  contest_recipe.yaml  foobarbaz.py
examples/resources/: contest_recipe.yaml  foobarbaz.py
examples/resources/data/: text.txt
examples/setup_commands/: contest_recipe.yaml  setup.py
